[package]
name = "lib3818-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
slot = 2
icon = "cool-x"
compress = true

[dependencies]
vexide = { version = "0.4.2", features = ["slint"] }
slint = { version = "1.5.1", default-features = false, optional = true, features = [
  "compat-1-2",
  "unsafe-single-threaded",
  "libm",
  "renderer-software",
] }
